--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,6 @@
-cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DUSE_OPENMP=ON .
+mkdir build
+cd build
+
+cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DUSE_OPENMP=ON ..
+cmake --build .
+./dene
